--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
             margin: 10px 0;
             border-radius: 5px;
         }
-        input[type="radio"], input[type="checkbox"], input[type="text"] {
+        input[type="radio"], input[type="checkbox"] {
             margin-right: 10px;
             margin-left: 20px;
+        }
+        input[type="text"] {
+            background-color: #87CEFA; /* Hellblau */
+            color: #000000; /* Schwarz für die Schrift */
+            padding: 5px;
+            border: none;
+            border-radius: 3px;
+            width: 90%; /* Breite anpassen */
         }
         button {
             background-color: #87CEFA; /* Hellblau */
@@ -139,7 +147,7 @@
         </div>
 
         <div class="question">
-            9. Darf ein 40-Jähriger Familienvater mit einem <span class="tooltip">Schlaganfall<span class="tooltiptext">Eine Unterbrechung der Blutzufuhr zum Gehirn, oft mit einseitiger Lähmung.</span></span> (mit <span class="tooltip">einseitiger Lähmung<span class="tooltiptext">Eine Lähmung, die nur eine Körperseite betrifft.</span></span> ) Sterbehilfe beanspruchen?<br>
+            9. Darf ein 40-Jähriger Familienvater mit einem <span class="tooltip">Schlaganfall<span class="tooltiptext">Eine Unterbrechung der Blutzufuhr zum Gehirn, oft mit einseitiger Lähmung.</span></span> (mit <span class="tooltip">einseitiger Lähmung<span class="tooltiptext">Eine Schwächung oder Lähmung auf einer Körperseite.</span></span>) Sterbehilfe in Anspruch nehmen?<br>
             <input type="radio" name="euthanasia_father" value="Ja" onclick="lockQuestion(this)"> Ja<br>
             <input type="radio" name="euthanasia_father" value="Nein" onclick="lockQuestion(this)"> Nein<br>
             <input type="radio" name="euthanasia_father" value="Unsicher" onclick="lockQuestion(this)"> Unsicher<br>
