--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
             margin-right: 10px;
             margin-left: 20px;
         }
-        input[type="text"] {
-            background-color: #87CEFA; /* Hellblau */
-            color: #000000; /* Schwarz für die Schrift */
-            padding: 5px;
+        input[type="text"], input[type="radio"], input[type="checkbox"] {
+            background-color: #87CEFA; /* Hellblau für die Antwortfelder */
+            color: #000000; /* Schwarz für die Schrift in den Feldern */
             border: none;
-            border-radius: 3px;
-            width: 90%; /* Breite anpassen */
+            border-radius: 5px;
+            padding: 5px;
         }
         button {
             background-color: #87CEFA; /* Hellblau */
@@ -147,7 +146,7 @@
         </div>
 
         <div class="question">
-            9. Darf ein 40-Jähriger Familienvater mit einem <span class="tooltip">Schlaganfall<span class="tooltiptext">Eine Unterbrechung der Blutzufuhr zum Gehirn, oft mit einseitiger Lähmung.</span></span> (mit <span class="tooltip">einseitiger Lähmung<span class="tooltiptext">Eine Schwächung oder Lähmung auf einer Körperseite.</span></span>) Sterbehilfe in Anspruch nehmen?<br>
+            9. Darf ein 40-Jähriger Familienvater mit einem <span class="tooltip">Schlaganfall<span class="tooltiptext">Eine Unterbrechung der Blutzufuhr zum Gehirn, oft mit einseitiger Lähmung verbunden.</span></span> Sterbehilfe in Anspruch nehmen?<br>
             <input type="radio" name="euthanasia_father" value="Ja" onclick="lockQuestion(this)"> Ja<br>
             <input type="radio" name="euthanasia_father" value="Nein" onclick="lockQuestion(this)"> Nein<br>
             <input type="radio" name="euthanasia_father" value="Unsicher" onclick="lockQuestion(this)"> Unsicher<br>
